syntax = "proto3";

package commerciaux;

// ========== APPORTEUR SERVICE ==========
service ApporteurService {
  rpc Create(CreateApporteurRequest) returns (Apporteur);
  rpc Update(UpdateApporteurRequest) returns (Apporteur);
  rpc Get(GetApporteurRequest) returns (Apporteur);
  rpc GetByUtilisateur(GetApporteurByUtilisateurRequest) returns (Apporteur);
  rpc List(ListApporteurRequest) returns (ListApporteurResponse);
  rpc ListByOrganisation(ListApporteurByOrganisationRequest) returns (ListApporteurResponse);
  rpc Activer(ActivateApporteurRequest) returns (Apporteur);
  rpc Desactiver(ActivateApporteurRequest) returns (Apporteur);
  rpc Delete(DeleteApporteurRequest) returns (DeleteResponse);
}

message Apporteur {
  string id = 1;
  string organisation_id = 2;
  string utilisateur_id = 3;
  string nom = 4;
  string prenom = 5;
  string type_apporteur = 6;
  string email = 7;
  string telephone = 8;
  string societe_id = 9;  // empty = toutes les sociétés
  bool actif = 10;
  string created_at = 11;
  string updated_at = 12;
}

message CreateApporteurRequest {
  string organisation_id = 1;
  string utilisateur_id = 2;
  string nom = 3;
  string prenom = 4;
  string type_apporteur = 5;
  string email = 6;
  string telephone = 7;
  string societe_id = 8;  // empty = toutes les sociétés
}

message UpdateApporteurRequest {
  string id = 1;
  string nom = 2;
  string prenom = 3;
  string type_apporteur = 4;
  string email = 5;
  string telephone = 6;
  string societe_id = 7;  // empty = toutes les sociétés
}

message GetApporteurRequest {
  string id = 1;
}

message GetApporteurByUtilisateurRequest {
  string utilisateur_id = 1;
}

message ListApporteurRequest {
  string search = 1;
  string type_apporteur = 2;
  bool actif = 3;
  Pagination pagination = 4;
}

message ListApporteurByOrganisationRequest {
  string organisation_id = 1;
  bool actif = 2;
  Pagination pagination = 3;
}

message ActivateApporteurRequest {
  string id = 1;
}

message DeleteApporteurRequest {
  string id = 1;
}

message ListApporteurResponse {
  repeated Apporteur apporteurs = 1;
  PaginationResult pagination = 2;
}

// ========== BAREME COMMISSION SERVICE ==========
service BaremeCommissionService {
  rpc Create(CreateBaremeCommissionRequest) returns (BaremeCommission);
  rpc Update(UpdateBaremeCommissionRequest) returns (BaremeCommission);
  rpc Get(GetBaremeCommissionRequest) returns (BaremeCommission);
  rpc GetByCode(GetBaremeCommissionByCodeRequest) returns (BaremeCommission);
  rpc List(ListBaremeCommissionRequest) returns (ListBaremeCommissionResponse);
  rpc ListByOrganisation(ListBaremeByOrganisationRequest) returns (ListBaremeCommissionResponse);
  rpc ListActifs(ListBaremeActifsRequest) returns (ListBaremeCommissionResponse);
  rpc GetWithPaliers(GetBaremeWithPaliersRequest) returns (BaremeCommissionWithPaliers);
  rpc Activer(ActivateBaremeRequest) returns (BaremeCommission);
  rpc Desactiver(ActivateBaremeRequest) returns (BaremeCommission);
  rpc Delete(DeleteBaremeCommissionRequest) returns (DeleteResponse);
}

message BaremeCommission {
  string id = 1;
  string organisation_id = 2;
  string code = 3;
  string nom = 4;
  string description = 5;
  string type_calcul = 6;
  string base_calcul = 7;
  double montant_fixe = 8;
  double taux_pourcentage = 9;
  bool precomptee = 10;
  bool recurrence_active = 11;
  double taux_recurrence = 12;
  int32 duree_recurrence_mois = 13;
  int32 duree_reprises_mois = 14;
  double taux_reprise = 15;
  string type_produit = 16;
  string profil_remuneration = 17;
  string societe_id = 18;
  string canal_vente = 19;
  double repartition_commercial = 20;
  double repartition_manager = 21;
  double repartition_agence = 22;
  double repartition_entreprise = 23;
  int32 version = 24;
  string date_effet = 25;
  string date_fin = 26;
  bool actif = 27;
  string cree_par = 28;
  string modifie_par = 29;
  string motif_modification = 30;
  string created_at = 31;
  string updated_at = 32;
}

message BaremeCommissionWithPaliers {
  BaremeCommission bareme = 1;
  repeated PalierCommission paliers = 2;
}

message CreateBaremeCommissionRequest {
  string organisation_id = 1;
  string code = 2;
  string nom = 3;
  string description = 4;
  string type_calcul = 5;
  string base_calcul = 6;
  double montant_fixe = 7;
  double taux_pourcentage = 8;
  bool precomptee = 9;
  bool recurrence_active = 10;
  double taux_recurrence = 11;
  int32 duree_recurrence_mois = 12;
  int32 duree_reprises_mois = 13;
  double taux_reprise = 14;
  string type_produit = 15;
  string profil_remuneration = 16;
  string societe_id = 17;
  string canal_vente = 18;
  double repartition_commercial = 19;
  double repartition_manager = 20;
  double repartition_agence = 21;
  double repartition_entreprise = 22;
  string date_effet = 23;
  string date_fin = 24;
  string cree_par = 25;
}

message UpdateBaremeCommissionRequest {
  string id = 1;
  string nom = 2;
  string description = 3;
  string type_calcul = 4;
  string base_calcul = 5;
  double montant_fixe = 6;
  double taux_pourcentage = 7;
  bool precomptee = 8;
  bool recurrence_active = 9;
  double taux_recurrence = 10;
  int32 duree_recurrence_mois = 11;
  int32 duree_reprises_mois = 12;
  double taux_reprise = 13;
  string type_produit = 14;
  string profil_remuneration = 15;
  string societe_id = 16;
  string canal_vente = 17;
  double repartition_commercial = 18;
  double repartition_manager = 19;
  double repartition_agence = 20;
  double repartition_entreprise = 21;
  string date_effet = 22;
  string date_fin = 23;
  string modifie_par = 24;
  string motif_modification = 25;
}

message GetBaremeCommissionRequest {
  string id = 1;
}

message GetBaremeCommissionByCodeRequest {
  string code = 1;
}

message ListBaremeCommissionRequest {
  string search = 1;
  string type_calcul = 2;
  string canal_vente = 3;
  bool actif = 4;
  Pagination pagination = 5;
}

message ListBaremeByOrganisationRequest {
  string organisation_id = 1;
  bool actif = 2;
  Pagination pagination = 3;
}

message ListBaremeActifsRequest {
  string organisation_id = 1;
  string date = 2;
  Pagination pagination = 3;
}

message GetBaremeWithPaliersRequest {
  string id = 1;
}

message ActivateBaremeRequest {
  string id = 1;
}

message DeleteBaremeCommissionRequest {
  string id = 1;
}

message ListBaremeCommissionResponse {
  repeated BaremeCommission baremes = 1;
  PaginationResult pagination = 2;
}

// ========== PALIER COMMISSION SERVICE ==========
service PalierCommissionService {
  rpc Create(CreatePalierCommissionRequest) returns (PalierCommission);
  rpc Update(UpdatePalierCommissionRequest) returns (PalierCommission);
  rpc Get(GetPalierCommissionRequest) returns (PalierCommission);
  rpc ListByBareme(ListPalierByBaremeRequest) returns (ListPalierCommissionResponse);
  rpc Activer(ActivatePalierRequest) returns (PalierCommission);
  rpc Desactiver(ActivatePalierRequest) returns (PalierCommission);
  rpc Delete(DeletePalierCommissionRequest) returns (DeleteResponse);
}

message PalierCommission {
  string id = 1;
  string organisation_id = 2;
  string bareme_id = 3;
  string code = 4;
  string nom = 5;
  string description = 6;
  string type_palier = 7;
  double seuil_min = 8;
  double seuil_max = 9;
  double montant_prime = 10;
  double taux_bonus = 11;
  bool cumulable = 12;
  bool par_periode = 13;
  string type_produit = 14;
  int32 ordre = 15;
  bool actif = 16;
  string created_at = 17;
  string updated_at = 18;
}

message CreatePalierCommissionRequest {
  string organisation_id = 1;
  string bareme_id = 2;
  string code = 3;
  string nom = 4;
  string description = 5;
  string type_palier = 6;
  double seuil_min = 7;
  double seuil_max = 8;
  double montant_prime = 9;
  double taux_bonus = 10;
  bool cumulable = 11;
  bool par_periode = 12;
  string type_produit = 13;
  int32 ordre = 14;
}

message UpdatePalierCommissionRequest {
  string id = 1;
  string code = 2;
  string nom = 3;
  string description = 4;
  string type_palier = 5;
  double seuil_min = 6;
  double seuil_max = 7;
  double montant_prime = 8;
  double taux_bonus = 9;
  bool cumulable = 10;
  bool par_periode = 11;
  string type_produit = 12;
  int32 ordre = 13;
}

message GetPalierCommissionRequest {
  string id = 1;
}

message ListPalierByBaremeRequest {
  string bareme_id = 1;
  Pagination pagination = 2;
}

message ActivatePalierRequest {
  string id = 1;
}

message DeletePalierCommissionRequest {
  string id = 1;
}

message ListPalierCommissionResponse {
  repeated PalierCommission paliers = 1;
  PaginationResult pagination = 2;
}

// ========== MODELE DISTRIBUTION SERVICE ==========
service ModeleDistributionService {
  rpc Create(CreateModeleDistributionRequest) returns (ModeleDistribution);
  rpc Update(UpdateModeleDistributionRequest) returns (ModeleDistribution);
  rpc Get(GetModeleDistributionRequest) returns (ModeleDistribution);
  rpc GetByCode(GetModeleDistributionByCodeRequest) returns (ModeleDistribution);
  rpc List(ListModeleDistributionRequest) returns (ListModeleDistributionResponse);
  rpc Delete(DeleteModeleDistributionRequest) returns (DeleteResponse);
}

message ModeleDistribution {
  string id = 1;
  string code = 2;
  string nom = 3;
  string description = 4;
  string created_at = 5;
  string updated_at = 6;
}

message CreateModeleDistributionRequest {
  string code = 1;
  string nom = 2;
  string description = 3;
}

message UpdateModeleDistributionRequest {
  string id = 1;
  string code = 2;
  string nom = 3;
  string description = 4;
}

message GetModeleDistributionRequest {
  string id = 1;
}

message GetModeleDistributionByCodeRequest {
  string code = 1;
}

message ListModeleDistributionRequest {
  string search = 1;
  Pagination pagination = 2;
}

message DeleteModeleDistributionRequest {
  string id = 1;
}

message ListModeleDistributionResponse {
  repeated ModeleDistribution modeles = 1;
  PaginationResult pagination = 2;
}

// ========== COMMON MESSAGES ==========
message Pagination {
  int32 page = 1;
  int32 limit = 2;
  string sort_by = 3;
  string sort_order = 4;
}

message PaginationResult {
  int32 total = 1;
  int32 page = 2;
  int32 limit = 3;
  int32 total_pages = 4;
}

message DeleteResponse {
  bool success = 1;
}
